--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "cmd",
+  "name": "dict",
   "version": "1.0.0",
-  "description": "",
+  "description": "A dictionary cli app",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "dict": "./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "commander": "^3.0.1",
     "inquirer": "^7.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.4.0"
   }
 }
