--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "commander": "^3.0.1",
+    "dotenv": "^8.1.0",
     "inquirer": "^7.0.0"
   },
   "devDependencies": {
