--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "boxen": "^4.1.0",
+    "chalk": "^2.4.2",
     "commander": "^3.0.1",
     "dotenv": "^8.1.0",
-    "inquirer": "^7.0.0"
+    "inquirer": "^7.0.0",
+    "ora": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.4.0"
