--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
     "boxen": "^4.1.0",
     "chalk": "^2.4.2",
     "commander": "^3.0.1",
